tests/valid/struct/generic_field_param.facet
struct Box<T> {
  value: affine T
}

fn main() -> affine Box<affine isize> {
  Box<affine isize> { value = 1 }
}
