tests/invalid/struct/unknown_struct_type.facet
struct Box {
  value: unrestricted Missing
}

fn main() -> unrestricted () {
  ()
}
